tests/fsharp/typecheck/sigs/neg63.bsl

neg63.fs(6,8,6,14): typecheck error FS3155: A quotation may not involve an assignment to or taking the address of a captured local variable

neg63.fs(11,9,11,10): typecheck error FS0421: The address of the variable 'x' cannot be used at this point

neg63.fs(11,9,11,10): typecheck error FS3155: A quotation may not involve an assignment to or taking the address of a captured local variable

neg63.fs(11,5,11,13): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg63.fs(10,5,11,13): typecheck error FS0426: A method return type would contain byrefs which is not permitted

neg63.fs(14,8,14,9): typecheck error FS3155: A quotation may not involve an assignment to or taking the address of a captured local variable
